Fix: Enable Restart button for all session states in web interface
The Restart button was incorrectly disabled for non-stopped sessions.
Since restart performs both stop and start actions, it should work
for any session state, similar to the Kill button.

Removed the conditional disabled state from the Restart button.

--- a/cmd/anvilweb/static/index.html
+++ b/cmd/anvilweb/static/index.html
@@ -262,7 +262,7 @@
                                         <button data-session-id="${id}" data-action="context" class="secondary">Context</button>
                                         <button data-session-id="${id}" data-action="alias" class="secondary">Alias</button>
                                         <button data-session-id="${id}" data-action="stop" ${s.state === 'stopped' ? 'disabled' : ''} class="secondary">Stop</button>
-                                        <button data-session-id="${id}" data-action="restart" ${s.state !== 'stopped' ? 'disabled' : ''} class="secondary">Restart</button>
+                                        <button data-session-id="${id}" data-action="restart" class="secondary">Restart</button>
                                         <button data-session-id="${id}" data-action="kill" class="contrast">Kill</button>
                                     </td>
                                 </tr>
