Remove deprecated endpoints and fix mailbox auto-completion
- Fix PROMPT_RESPONSE messages not auto-completing
- Remove deprecated message types (LogInfo, LogError, StatusUpdate)
- Remove entire chat log system (replaced by audit log)
- Migrate user prompts to mailbox system in main.go
- Remove {id}/in and {id}/out 9P endpoints
- Only mail processor uses sess.Send() directly
- Fix file index constants after removing in/out files
- Remove unused SendCtl function

--- a/cmd/anvilweb/static/index.html
+++ b/cmd/anvilweb/static/index.html
@@ -839,7 +839,7 @@ ${msg.body}`;
                 'REVIEW_REQUEST': 'REVIEW_RESPONSE',
                 'APPROVAL_REQUEST': 'APPROVAL_RESPONSE'
             };
-            return replyMap[msgType] || 'PROMPT';
+            return replyMap[msgType] || 'PROMPT_REQUEST';
         }
 
         function replyToMessage() {
